--- a/acceuil.html
+++ b/acceuil.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/bootstrap.min.js"></script>
-  <title>Acceuil</title>
+  <title>B&O SERVICES</title>
   
 </head>
 <body>
