--- a/index.html
+++ b/index.html
@@ -1,1 +1,365 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.min.js"></script>
+  <title>B&O SERVICES</title>
+  
+</head>
+<body>
+  <div class="collapse text-bg-dark" id="navbarHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-7 py-4">
+          <h4>B&O services</h4>
+          <p class="text-body-secondary">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+        </div>
+        <div class="col-sm-4 offset-md-1 py-4">
+          <h4>Menu</h4>
+          <ul class="list-unstyled">
+            <li><a href="acceuil.html" class="text-white">Acceuil</a></li>
+            <li><a href="html/connexion.html" class="text-white">Connexion</a></li>
+            <li><a href="html/tarifs.html" class="text-white">Tarifs</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
+        <strong>B&O services</strong>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+</header>
+<main>
+  <div class="bloc2">
+    <section class="py-5 text-center container ">
+      <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+          <h1 class="fw-light"> Services de nettoyage professionnel pour votre maison ou votre bureau.</h1>
+          <p class="lead text-body-secondary">Nous offrons des services de nettoyages complets pour les <br> particulier et les entreprises à base d'ingredients naturels
+            <br> Disponible 6j/7, desencombrement 20 à 30 EUR/h.</p>
+          <p>
+            <a href="mailto:olivier.bomombe@yahoo.com?subject=Sujet&body=Je veux obtenir un devis" class="btn btn-primary my-2"  style="background-color: #04697B; color: white">Obtenir un devis!</a>
+          </p>
+        </div>
+      </div>
+    </section>
+  </div>
+  <div class="album py-5 bg-body-tertiary">
+    <div class="container">
 
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/4c-43-nettoyage-de-vitres.jpg"  class="card-img-top" placeholder width="100%" height="  225   ">
+            <div class="card-body">
+              <p class="card-text">Nettoyage de vitres</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/nettoyage-espace-de-travail.jpg"  class="card-img-top" placeholder width="100%" height="  225   ">
+            <div class="card-body">
+              <p class="card-text">Nettoyage d'espace de travail</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/nettoyage-locaux-commerciaux.jpg"  class="card-img-top" placeholder width="100%" height="  225   "  >
+            <div class="card-body">
+              <p class="card-text">Nettoyage des locaux commerciaux</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img  src="image/nettoyage batiments.webp" class="card-img-top" placeholder width="100%" height="  225   ">
+            <div class="card-body">
+              <p class="card-text">Nettoyage de batiments</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/nettoyage chantiers.webp" class="card-img-top" placeholder width="100%" height="  225   ">
+            <div class="card-body">
+              <p class="card-text">Nettoyage de chantier</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/nettoyage escaliers.jpeg" class="card-img-top" placeholder width="100%" height="  225   "  >
+            <div class="card-body">
+              <p class="card-text">Nettoyage des escaliers</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/nettoyage d'entretien.jpg" class="card-img-top" placeholder width="100%" height="  225   ">
+            <div class="card-body">
+              <p class="card-text">Nettoyage d'entretien</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="image/netoyage de base.webp" class="card-img-top" placeholder width="100%" height="  225   "  >
+            <div class="card-body">
+              <p class="card-text">Nettoyage de Base</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm" >
+            <img src="image/nettoyage facade.jpeg" class="card-img-top" placeholder width="100%" height="  225   ">
+            <div class="card-body">
+              <p class="card-text">Nettoyage de façade</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">B&O</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Services</button>
+                </div>
+                <small class="text-body-secondary">new</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="image/IMG-20240228-WA0086.jpg" class="image-carousel">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Nettoyage</h5>
+          <p>Notre passage dans cette cuisine, nous l'avons rendu impeccable, elle est au sommet de sa propreté.</p>
+        </div>
+      </div>
+      <div class="carousel-item card shadow-sm">
+        <img src="image/IMG-20240228-WA0083.jpg"  class="image-carousel">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Passage de notre employé</h5>
+          <p>on fait un travail essentielle et satisfaisant dans le domaine du Nettoyage.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="image/IMG-20240228-WA0085.jpg" class="image-carousel">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Terrain apres notre passage</h5>
+          <p>Nous avons finalement nettoyer ce jardin</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="container px-4 py-5" id="custom-cards">
+    <h2 class="pb-2 border-bottom">Bon à Savoir</h2>
+
+    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('image/_0a1d58b9-133a-47b0-83fc-9d7a68e99b08.jpeg'); background-position: 50% 50%;">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1" style="font-size: 20px;">B&O Services se distingue par son engagement envers la qualité et le professionnalisme de ses services de nettoyage.
+            </h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
+              </li>
+              <li class="d-flex align-items-center me-3">
+                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
+                <p class="fw-bold" style="background-color: #04697B; text-align: center; border: #04697B 1px solid; border-radius: 5px;">1. Qualité et professionnalisme</p>
+              </li>
+              <li class="d-flex align-items-center">
+                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
+                <small></small>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('image/_cb659e06-72e9-4a1f-8818-1423016bd3ba.jpeg'); background-position: 50% 50%;">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1" style="font-size: 20px;"> B&O Services se démarque en utilisant des produits de nettoyage écologiques et en mettant en place des pratiques respectueuses de l'environnement.</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
+              </li>
+              <li class="d-flex align-items-center me-3">
+                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
+                <p class="fw-bold"   style="background-color: #04697B;text-align: center; border: #04697B 1px solid; border-radius: 5px;">2. Durabilité et respect de l'environnement</p>
+              </li>
+              <li class="d-flex align-items-center">
+                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
+                <small></small>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('image/_f0ec7210-8ed4-4a31-996f-6902b8f7d2ed.jpeg'); background-position: 75% 25%;">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1" style="font-size: 20px;  color: black; font-weight: bold; text-align: center;">B&O Service offre un service personnalisé et flexible adapté aux besoins de chaque client.</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
+              </li>
+              <li class="d-flex align-items-center me-3">
+                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
+                <p class="fw-bold" style="background-color: #04697B; text-align: center; border: #04697B 1px solid; border-radius: 5px; ">3. Service personnalisé et flexible</p>
+              </li>
+              <li class="d-flex align-items-center">
+                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
+                <small></small>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </main>
+
+
+<footer class="text-body-secondary py-5">
+  <div class="container">
+    <p class="float-end mb-1">
+      olivier.bomombe@yahoo.com <br>
+      03149 Forst(Lausitz)   <a href="">+4915147758268</a>.
+    </p>
+    <p> WA +4917693713563</p>
+    <p class="mb-1"> &copy; 2024 B&O services, Inc</p>
+  
+  </div>
+</footer>
+
+</body>
+</html>
