--- a/html/connexion.html
+++ b/html/connexion.html
@@ -12,10 +12,10 @@
 
   <main class="form-signin w-100 m-auto">
     <form>
-      <img class="mb-4" src="image/photo_2024-05-18_11-29-49.jpg" alt="" width="72" height="57">
+      <img class="mb-4" src="../image/photo_2024-05-18_11-29-49.jpg" alt="" width="72" height="57">
       <h1 class="h3 mb-3 fw-normal">Inscription</h1>
   
-      <div class="form-floating">
+      <div class=" container form-floating">
         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Adresse Email</label>
       </div>
