--- a/html/connexion.html
+++ b/html/connexion.html
@@ -10,6 +10,7 @@
 </head>
 <body class="text-center">
 
+ <div class="container">
   <main class="form-signin w-100 m-auto">
     <form>
       <img class="mb-4" src="../image/photo_2024-05-18_11-29-49.jpg" alt="" width="72" height="57">
@@ -38,6 +39,7 @@
       <p class="mt-5 mb-3 text-body-secondary">&copy; 2024</p>
     </form>
   </main>
+  </div>
   <script>
     const toast = document.getElementById('toast');
 
