--- a/html/connexion.html
+++ b/html/connexion.html
@@ -17,11 +17,11 @@
       <h1 class="h3 mb-3 fw-normal">Inscription</h1>
   
       <div class=" container form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" class="form-control col-md-6" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Adresse Email</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password" class="form-control col-md-6" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Mot de passe</label>
       </div>
   
@@ -30,7 +30,7 @@
           <input type="checkbox" value="remember-me"> Se souvenir de moi
         </label>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" id="openToastButton" type="submit" onclick="showToast('Votre message a été envoyé !')">S'inscrire</button>
+      <button class="w-100 btn btn-lg btn-primary col-md-6" id="openToastButton" type="submit" onclick="showToast('Votre message a été envoyé !')">S'inscrire</button>
       <div id="toast" class="toast">
         <div class="toast-content">
          Vouss etes inscrits
