--- a/html/connexion.html
+++ b/html/connexion.html
@@ -11,7 +11,7 @@
 <body class="text-center">
 
  <div class="container">
-  <main class="form-signin w-100 m-auto">
+  <main class="form-signin col-md-6 m-10">
     <form>
       <img class="mb-4" src="../image/photo_2024-05-18_11-29-49.jpg" alt="" width="72" height="57">
       <h1 class="h3 mb-3 fw-normal">Inscription</h1>
