--- a/html/connexion.html
+++ b/html/connexion.html
@@ -10,13 +10,13 @@
 </head>
 <body class="text-center">
 
- <div class="container">
+ 
   <main class="form-signin col-md-6 m-10">
     <form>
       <img class="mb-4" src="../image/photo_2024-05-18_11-29-49.jpg" alt="" width="72" height="57">
       <h1 class="h3 mb-3 fw-normal">Inscription</h1>
   
-      <div class=" container form-floating">
+      <div class="form-floating">
         <input type="email" class="form-control col-md-6" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Adresse Email</label>
       </div>
@@ -33,13 +33,12 @@
       <button class="w-100 btn btn-lg btn-primary col-md-6" id="openToastButton" type="submit" onclick="showToast('Votre message a été envoyé !')">S'inscrire</button>
       <div id="toast" class="toast">
         <div class="toast-content">
-         Vouss etes inscrits
+         Vous etes inscrits
         </div>
       </div>
       <p class="mt-5 mb-3 text-body-secondary">&copy; 2024</p>
     </form>
   </main>
-  </div>
   <script>
     const toast = document.getElementById('toast');
 
