--- a/html/tarifs.html
+++ b/html/tarifs.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/designAcceuil.css">
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/designAcceuil.css">
+    <script src="../js/bootstrap.min.js"></script>
     <title>Tarifs</title>
   
 </head>
