--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('image/_0a1d58b9-133a-47b0-83fc-9d7a68e99b08.jpeg'); background-position: 50% 50%;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../image/_0a1d58b9-133a-47b0-83fc-9d7a68e99b08.jpeg'); background-position: 50% 50%;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1" style="font-size: 20px;">B&O Services se distingue par son engagement envers la qualité et le professionnalisme de ses services de nettoyage.
             </h3>
@@ -262,7 +262,7 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('image/_cb659e06-72e9-4a1f-8818-1423016bd3ba.jpeg'); background-position: 50% 50%;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../image/_cb659e06-72e9-4a1f-8818-1423016bd3ba.jpeg'); background-position: 50% 50%;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1" style="font-size: 20px;"> B&O Services se démarque en utilisant des produits de nettoyage écologiques et en mettant en place des pratiques respectueuses de l'environnement.</h3>
             <ul class="d-flex list-unstyled mt-auto">
@@ -282,7 +282,7 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('image/_f0ec7210-8ed4-4a31-996f-6902b8f7d2ed.jpeg'); background-position: 75% 25%;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../image/_f0ec7210-8ed4-4a31-996f-6902b8f7d2ed.jpeg'); background-position: 75% 25%;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1" style="font-size: 20px;  color: black; font-weight: bold; text-align: center;">B&O Service offre un service personnalisé et flexible adapté aux besoins de chaque client.</h3>
             <ul class="d-flex list-unstyled mt-auto">
