--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Menu</h4>
           <ul class="list-unstyled">
-            <li><a href="acceuil.html" class="text-white">Acceuil</a></li>
+            <li><a href="index.html" class="text-white">Acceuil</a></li>
             <li><a href="html/connexion.html" class="text-white">Connexion</a></li>
             <li><a href="html/tarifs.html" class="text-white">Tarifs</a></li>
           </ul>
