--- a/html/tarifs.html
+++ b/html/tarifs.html
@@ -111,7 +111,7 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Menu</h4>
           <ul class="list-unstyled">
-            <li><a href="FRONT END\acceuil.html" class="text-white">Acceuil</a></li>
+            <li><a href="FRONT END\index.html" class="text-white">Acceuil</a></li>
             <li><a href="connexion.html" class="text-white">Connexion</a></li>
           </ul>
         </div>
